<resources>
    <string name="app_name">Guess</string>
    <string name="please_enter_your_number_1_10">Please enter your number(1~10)</string>
    <string name="ok">ok</string>
    <string name="yes_you_got_it">Yes, you got it!</string>
    <string name="smaller">smaller</string>
    <string name="bigger">bigger</string>
    <string name="message">Message</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="replay_game">Replay game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">cancel</string>
    <string name="excellent">Excellent! The number is</string>
</resources>
